<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_nav_home"
      />

    <item
        android:id="@+id/add"
        android:icon="@drawable/baseline_add_box_black_24dp"
        android:title="@string/menu_item_add" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/menu_nav_search" />

    <item
        android:id="@+id/love"
        android:icon="@drawable/baseline_favorite_black_24dp"
        android:title="@string/menu_item_add" />


    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_person_black_24dp"
        android:title="@string/menu_item_add" />
</menu>