<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.mohamed.firebase.CommentActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"


        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/post_comment_user_image"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/avatar" />

                <TextView
                    android:id="@+id/post_comment_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/username"
                    android:textColor="#000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/post_comment_post_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/post_data" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/comments_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cardView"
        android:layout_above="@+id/view_seprator"
        >

    </android.support.v7.widget.RecyclerView>

<View
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:background="@color/gray"
    android:id="@+id/view_seprator"
    android:layout_above="@+id/comment_are"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/comment_are"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/post_comment_current_user_image"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:src="@drawable/avatar" />

        <EditText
            android:id="@+id/comment_comment_body"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/input_field"
            android:hint="@string/comment_data_hint"
            android:padding="10sp"
            android:textColorHint="@color/gray" />
        <Button
            android:id="@+id/comment_add_comment"
            style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:layout_margin="11dp"
            android:layout_weight="1"
            android:text="@string/post"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</RelativeLayout>
